--- a/Italian/main/BugReport.apk/res/values-it/strings.xml
+++ b/Italian/main/BugReport.apk/res/values-it/strings.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_label">Feedback</string>
-    <string name="app_title">"Bug     Report     Center"</string>
     <string name="report_miui">Segnala a MIUI</string>
     <string name="menu_copy">Copia</string>
-    <string name="menu_attach_screenshot">Allega screenshot</string>
-    <string name="menu_discard">Elimina</string>
     <string name="description">Descrizione (opzionale)</string>
     <string name="suggestion_description">Spero che aggiungerete la funzione X perchè…</string>
     <string name="nonsystemapp_description">Descrivi il problema</string>
@@ -20,16 +17,23 @@
     <string name="err_type_systemapp">App MIUI</string>
     <string name="err_type_nonsystemapp">Altre app</string>
     <string name="err_type_suggestion">Suggerimenti</string>
-    <string name="status_msg_pending_upload">%d feedback in caricamento…</string>
-    <string name="status_msg_collecting_log">Registrazione log</string>
+    <string name="err_type_mysuggestion">Suggerimenti</string>
+    <string name="err_type_mysuggestion_summary">Condividi idee e feedback con noi</string>
+    <string name="err_type_hardware">Hardware</string>
+    <string name="err_type_hardware_summary">Tasti, carica, sensori, etc.</string>
+    <string name="err_type_system">Sistema</string>
+    <string name="err_type_system_summary">Memoria, prestazioni, etc.</string>
+    <string name="err_type_xiaomi_service">Servizio clienti</string>
+    <string name="err_type_xiaomi_family">Mi Family</string>
     <string name="action_submit">Invia</string>
     <string name="action_cancel">Annulla</string>
     <string name="action_confirm">Seleziona</string>
     <string name="section_err_type">Tipologia Feedback</string>
     <string name="hot_problem">Mostra bug comuni</string>
-    <string name="title_hot_problem">Bug comuni</string>
-    <string name="non_system_app_select">Applicazioni scaricate</string>
-    <string name="system_app_select">Applicazioni integrate</string>
+    <string name="title_common_problem">Bug comuni</string>
+    <string name="title_hot_problem">Bug recenti</string>
+    <string name="non_system_app_select">App scaricate</string>
+    <string name="system_app_select">App integrate</string>
     <string name="section_description">Descrizione</string>
     <string name="section_screenshot">Screenshot</string>
     <string name="toast_report_sent_succeed">Il rapporto è stato inviato con successo</string>
@@ -48,10 +52,6 @@
     <string name="network_unavailable_dialog_title">Network non disponibile</string>
     <string name="network_unavailable_dialog_content">Il tuo feedback verrà inviato appena la rete sarà disponibile</string>
     <string name="network_unavailable_dialog_button_ok">OK</string>
-    <string name="wlan_unavailable_dialog_title">WLAN non disponibile</string>
-    <string name="wlan_unavailable_dialog_content">Sono richiesti %s di dati 2G/3G , premere OK per inviare solo con rete WLAN</string>
-    <string name="wlan_unavailable_dialog_button_sent">Invia subito</string>
-    <string name="wlan_unavailable_dialog_button_ok">OK</string>
     <string name="packaging_dialog_content">Generazione rapporto, si prega di attendere…</string>
     <string name="loading_apps">Creazione lista…</string>
     <string name="loading_hot_problem">Caricamento…</string>
@@ -82,6 +82,12 @@
     <string name="screen_lock">Lockscreen</string>
     <string name="systemui">Pannello delle notifiche</string>
     <string name="hot_problem_empty">Vuoto</string>
+    <string name="common_problem_empty">Vuoto</string>
+    <string name="button_feedback">Altro</string>
+    <string name="button_plus">+1</string>
+    <string name="problem_title">Descrizione</string>
+    <string name="problem_detail">Causa</string>
+    <string name="problem_solution">Soluzione</string>
     <string name="cta_dialog_title">Connessione Internet</string>
     <string name="cta_dialog_content">Questa applicazione deve connettersi ad Internet regolarmente.</string>
     <string name="cta_not_show_again">Non chiedere più</string>
