--- a/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
@@ -113,7 +113,10 @@
     <string name="search_online_video">Ricerca video online</string>
     <string name="declaration_allow">OK</string>
     <string name="declaration_content_td_custom">"Consentire la connessione ad Internet durante l'utilizzo dell'applicazione?"</string>
-    <string name="declaration_content">Vuoi accettare  le <a href="http://www.youku.com/pub/youku/service/agreement.shtml#agr1">Condizioni di Utilizzo</a> di Sohu Video, iQiyi, e altri fornitori video?</string>
+    <string name="declaration_content">"1. Utilizzando questo servizio accetti i "<a href="http://www.youku.com/pub/youku/service/agreement.shtml#agr1">Termini di utilizzo</a>" di Sohu Video, iQiyi, ed altri provider di contenuti.
+2. Aiutaci a migliorare questo prodotto inviando automaticamente a Xiaomi dati diagnostici e sull'utilizzo.
+3. Il nostro Plugin Video HD verrà installato automaticamente.
+4. Questo servizio deve collegarsi ad internet per funzionare correttamente."</string>
     <string name="declaration">"Termini d'uso"</string>
     <string name="no_longer_tips">"Ricorda la mia scelta"</string>
     <string name="more">Altro</string>
@@ -238,6 +241,8 @@
     <string name="select_count_xiang">%d selezionato</string>
     <string name="setting">Impostazioni</string>
     <string name="offline_setting">Video offline</string>
+    <string name="use_cellular_offlinedownload_title">Notifica download</string>
+    <string name="use_cellular_offlinedownload_summary">Mostra una notifica durante il download dei video</string>
     <string name="use_cellular_play_title">Notifica utilizzo dati</string>
     <string name="use_cellular_play_summary">Mostra una notifica quando si utilizza la rete mobile per vedere o scaricare i video</string>
     <string name="use_cellular_network">Usa la rete cellulare</string>
