--- a/Italian/main/AuthManager.apk/res/values-it/strings.xml
+++ b/Italian/main/AuthManager.apk/res/values-it/strings.xml
@@ -141,6 +141,23 @@
     <string name="HIPS_Perm_Recorder_Video">Registrazione video</string>
     <string name="HIPS_Perm_Recorder_Audio">Registrazione audio</string>
     <string name="HIPS_Perm_Recorder_VoiceCall">Registra chiamate vocali</string>
+    <string name="HIPS_Perm_Read_SMS">Read SMS messages</string>
+    <string name="HIPS_Perm_Read_SMS_Desc">read your SMS messages</string>
+    <string name="HIPS_Perm_Read_SMS_Hint">%1$s apps can read your SMS messages</string>
+    <string name="HIPS_Perm_Read_MMS">Read MMS messages</string>
+    <string name="HIPS_Perm_Read_MMS_Desc">read your multimedia messages</string>
+    <string name="HIPS_Perm_Read_MMS_Hint">%1$s apps can read your multimedia messages</string>
+    <string name="HIPS_Perm_Read_Call_Log">Read call log</string>
+    <string name="HIPS_Perm_Read_Call_Log_Desc">read call log</string>
+    <string name="HIPS_Perm_Read_Call_Log_Hint">%1$s apps can read your call log</string>
+    <string name="HIPS_Perm_Read_Contact">Read your contacts</string>
+    <string name="HIPS_Perm_Read_Contact_Desc">read your contacts</string>
+    <string name="HIPS_Perm_Read_Contact_Hint">%1$s apps can read your contacts</string>
+    <string name="HIPS_Perm_Xiaomi_Account">Mi Account</string>
+    <string name="HIPS_Perm_Xiaomi_Account_Desc">access your Mi Account</string>
+    <string name="HIPS_Perm_Xiaomi_Account_Hint">%1$s apps can access your Mi Account</string>
+    <string name="HIPS_Action_Reject_Once">Deny Once</string>
+    <string name="HIPS_Action_Accept_Once">Allow Once</string>
     <string name="app_name">Permessi</string>
     <string name="Generic_Copyright">Powered by team LBE</string>
     <string name="Generic_Version">Versione: %1$s</string>
